<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lyContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="7dp"
        android:layout_toLeftOf="@+id/imgEstadoFactura"
        android:layout_toStartOf="@+id/imgEstadoFactura">

        <TextView
            android:id="@+id/lblCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblrazonsocial"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/lblMotivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblrazonsocial"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/lblDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblProducto"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imgEstadoFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:paddingStart="2dp"
        android:paddingRight="2dp"
        android:paddingEnd="2dp"
        android:src="@drawable/icono_factura_descargada"
        android:contentDescription="@string/app_name"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>